fix: add image and videos to same mediaList