@@ -18,6 +18,7 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.time.LocalDateTime;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.UUID;
 import java.util.stream.Collectors;
@@ -62,15 +63,34 @@ public class TestimonialService {
                 .categories(categories)
                 .build();
 
-        //Guardar medias
-        if(request.getMediaUrls()!=null){
-            List<Media> mediaList = request.getMediaUrls().stream()
+
+        List<Media> mediaList = new ArrayList<>();
+
+        //Guardar imágenes
+        if(request.getImageUrls()!=null){
+            mediaList.addAll(
+                request.getImageUrls().stream()
                     .map(url -> Media.builder()
                             .url(url)
                             .type(MediaType.IMAGE)
                             .testimonial(testimonial)
                             .build())
-                    .collect(Collectors.toList());
+                    .toList());
+        }
+
+        //Guardar videos
+        if(request.getVideoUrls()!=null){
+            mediaList.addAll(
+                    request.getVideoUrls().stream()
+                            .map(url -> Media.builder()
+                                    .url(url)
+                                    .type(MediaType.VIDEO)
+                                    .testimonial(testimonial)
+                                    .build())
+                            .toList());
+        }
+
+        if(!mediaList.isEmpty()){
             testimonial.setMedia(mediaList);
         }
 
